Fix merge issues, fix counter issue after visiting hub on tablet

--- a/app/assets/css/tablet.css
+++ b/app/assets/css/tablet.css
@@ -313,9 +313,9 @@ div#nav-search {
 div#search-box {
     display:                    block;
     top:                        -12px;
-    width:                      159px;
     position:                   relative;
     left:                       19px;
+    width:                      178px;
 }
 input.search-input {
     background:                 none repeat scroll 0% 0% transparent;
@@ -324,10 +324,12 @@ input.search-input {
     width:                      159px;
     position:                   relative;
     top:                        -1px;
+    left:                       -10px;
 }
 div.search-results {
     background:                 none repeat scroll 0% 0% rgb(33, 23, 10);
-    margin-left:                -25px;
+    margin-left:                -15px;
+    z-index:                    10000;
 }
 #nav-search .search-results a span {
     top:                        -9px;
